force-app/main/default/objects/Client_Survey__c/Client_Survey__c.object-meta.xml
<CustomObject>
    <description>ECM v1</description>
    <label>Client Survey</label>
    <nameField>
        <displayFormat>ClientSurvey-{00000}</displayFormat>
        <label>Client Survey #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Surveys</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>