force-app/main/default/objects/Client_Survey__c/fields/Baseine__c.field-meta.xml
<CustomField>
    <fullName>Baseine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Baseine</label>
    <referenceTo>Client_Survey__c</referenceTo>
    <relationshipLabel>Client Surveys</relationshipLabel>
    <relationshipName>Client_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>