force-app/main/default/objects/Client_Survey__c/fields/Case_Record__c.field-meta.xml
<CustomField>
    <fullName>Case_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Record</label>
    <referenceTo>Case_Record__c</referenceTo>
    <relationshipLabel>Client Surveys</relationshipLabel>
    <relationshipName>Client_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>