force-app/main/default/objects/Client_Survey__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Client Surveys</relationshipLabel>
    <relationshipName>Client_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>