force-app/main/default/objects/Client_Survey__c/fields/ECM_Sharing__c.field-meta.xml
<CustomField>
    <fullName>ECM_Sharing__c</fullName>
    <description>ECMv1 field set by workflow used by criteria based sharing.</description>
    <label>ECM Sharing</label>
    <length>80</length>
    <type>Text</type>
</CustomField>