force-app/main/default/objects/Client_Survey__c/fields/First_Letter_of_last_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Letter_of_last_Name__c</fullName>
    <formula>LEFT(Client__r.LastName , 1)</formula>
    <label>First Letter of last Name</label>
    <type>Text</type>
</CustomField>