force-app/main/default/objects/Client_Survey__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>For ecm demo site</description>
    <label>First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>