force-app/main/default/objects/Client_Survey__c/fields/Group_Class_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Group_Class_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group / Class Assignment</label>
    <referenceTo>GroupClass_Assignment__c</referenceTo>
    <relationshipLabel>Client Surveys</relationshipLabel>
    <relationshipName>Client_Surveys1</relationshipName>
    <type>Lookup</type>
</CustomField>