force-app/main/default/objects/Client_Survey__c/fields/Group_Class_Session__c.field-meta.xml
<CustomField>
    <fullName>Group_Class_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group / Class Activity</label>
    <referenceTo>Group_Class_Session__c</referenceTo>
    <relationshipLabel>Client Surveys</relationshipLabel>
    <relationshipName>Client_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>