force-app/main/default/objects/Client_Survey__c/fields/I_felt_respected_by_the_staff__c.field-meta.xml
<CustomField>
    <fullName>I_felt_respected_by_the_staff__c</fullName>
    <inlineHelpText>Rate experience in the past 12 months</inlineHelpText>
    <label>I felt respected by the staff</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Disagree completely</fullName>
            </value>
            <value>
                <fullName>Somewhat disagree</fullName>
            </value>
            <value>
                <fullName>Somewhat agree</fullName>
            </value>
            <value>
                <fullName>Agree completely</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>