force-app/main/default/objects/Client_Survey__c/fields/Next__c.field-meta.xml
<CustomField>
    <fullName>Next__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next</label>
    <referenceTo>Client_Survey__c</referenceTo>
    <relationshipLabel>Client Surveys (Client Survey)</relationshipLabel>
    <relationshipName>Client_Surveys2</relationshipName>
    <type>Lookup</type>
</CustomField>