force-app/main/default/objects/Client_Survey__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Maintained by trigger</description>
    <label>Order</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
            <value>
                <fullName>Latest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>