force-app/main/default/objects/Client_Survey__c/fields/Placeholder_Comments__c.field-meta.xml
<CustomField>
    <fullName>Placeholder_Comments__c</fullName>
    <description>Temporary field added in April 2019 to indicate who has taken Cara&apos;s Socioemotional and Non-Cognitive Skills survey in the time before the full survey was mapped from FormAssemble and stored in Salesforce.</description>
    <label>Placeholder Comments</label>
    <type>TextArea</type>
</CustomField>