force-app/main/default/objects/Client_Survey__c/fields/Previous__c.field-meta.xml
<CustomField>
    <fullName>Previous__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous</label>
    <referenceTo>Client_Survey__c</referenceTo>
    <relationshipLabel>Client Surveys (Previous)</relationshipLabel>
    <relationshipName>Client_Surveys1</relationshipName>
    <type>Lookup</type>
</CustomField>