force-app/main/default/objects/Client_Survey__c/fields/Question_Number_Two__c.field-meta.xml
<CustomField>
    <fullName>Question_Number_Two__c</fullName>
    <label>Question Number Two</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Option One</fullName>
            </value>
            <value>
                <fullName>Option Two</fullName>
            </value>
            <value>
                <fullName>Option Three</fullName>
            </value>
            <value>
                <fullName>Option Four</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>