force-app/main/default/objects/Client_Survey__c/fields/Viral_Load__c.field-meta.xml
<CustomField>
    <fullName>Viral_Load__c</fullName>
    <label>Viral Load</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>